--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "server": "node --es-module-specifier-resolution=node src/server.js",
+    "server": "ts-node --esm src/server.ts",
     "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,6 +52,7 @@
   "proxy": "http://localhost:3333",
   "devDependencies": {
     "concurrently": "^8.2.1",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "ts-node": "^10.9.1"
   }
 }
